v1.0.0/modules/schema/pages/class/BranchGroup.adoc
= `BranchGroup`
:toclevels: 4


+++A group of branch terminals whose directed flow summation is to be monitored. A branch group need not form a cutset of the network.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:BranchGroup`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`BranchGroup`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
BranchGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}











BranchGroupTerminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PinBranchGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}








BranchGroup -> BranchGroupTerminal: BranchGroupTerminal


BranchGroup -> PinBranchGroup: PinBranchGroup


BranchGroup -> DiagramObject: DiagramObjects


BranchGroup -> InstanceSet: InstanceSet


BranchGroup -> Name: Names


BranchGroup -> ChangeSetMember: PropertiesCIMDataObject


BranchGroup -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<maximumActivePower,`maximumActivePower`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The maximum active power flow.+++

| <<maximumReactivePower,`maximumReactivePower`>>
| 0..1
| xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The maximum reactive power flow.+++

| <<minimumActivePower,`minimumActivePower`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The minimum active power flow.+++

| <<minimumReactivePower,`minimumReactivePower`>>
| 0..1
| xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The minimum reactive power flow.+++

| <<monitorActivePower,`monitorActivePower`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Monitor the active power flow.+++

| <<monitorReactivePower,`monitorReactivePower`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Monitor the reactive power flow.+++

| <<BranchGroupTerminal,`BranchGroupTerminal`>>
| 0..*
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]
| +++The directed branch group terminals to be summed.+++

| <<PinBranchGroup,`PinBranchGroup`>>
| 0..*
| xref::class/PinBranchGroup.adoc[`PinBranchGroup`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BranchGroupTerminal]
=== `BranchGroupTerminal`
+++The directed branch group terminals to be summed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.BranchGroupTerminal`
| Cardinality
| 0..*
| Type
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#maximumActivePower]
=== `maximumActivePower`
+++The maximum active power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.maximumActivePower`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#maximumReactivePower]
=== `maximumReactivePower`
+++The maximum reactive power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.maximumReactivePower`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

//[discrete]
[#minimumActivePower]
=== `minimumActivePower`
+++The minimum active power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.minimumActivePower`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#minimumReactivePower]
=== `minimumReactivePower`
+++The minimum reactive power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.minimumReactivePower`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

//[discrete]
[#monitorActivePower]
=== `monitorActivePower`
+++Monitor the active power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.monitorActivePower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#monitorReactivePower]
=== `monitorReactivePower`
+++Monitor the reactive power flow.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.monitorReactivePower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PinBranchGroup]
=== `PinBranchGroup`


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.PinBranchGroup`
| Cardinality
| 0..*
| Type
| xref::class/PinBranchGroup.adoc[`PinBranchGroup`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


