v1.1.0/modules/schema/pages/class/BranchGroup.adoc
= `BranchGroup`
:toclevels: 4


+++A group of branch terminals whose directed flow summation is to be monitored. A branch group need not form a cutset of the network.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:BranchGroup`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`BranchGroup`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BranchGroupTerminal,`BranchGroupTerminal`>>
//| [[slots_table.BranchGroupTerminal]]<<BranchGroupTerminal,`BranchGroupTerminal`>>
| 0..* +
xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]
| +++The directed branch group terminals to be summed.+++
| _n/a_

| <<PinBranchGroup,`PinBranchGroup`>>
//| [[slots_table.PinBranchGroup]]<<PinBranchGroup,`PinBranchGroup`>>
| 0..* +
xref::class/PinBranchGroup.adoc[`PinBranchGroup`]
| _n/a_
| _n/a_

| <<maximumActivePower,`maximumActivePower`>>
//| [[slots_table.maximumActivePower]]<<maximumActivePower,`maximumActivePower`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The maximum active power flow.+++
| _n/a_

| <<maximumReactivePower,`maximumReactivePower`>>
//| [[slots_table.maximumReactivePower]]<<maximumReactivePower,`maximumReactivePower`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The maximum reactive power flow.+++
| _n/a_

| <<minimumActivePower,`minimumActivePower`>>
//| [[slots_table.minimumActivePower]]<<minimumActivePower,`minimumActivePower`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The minimum active power flow.+++
| _n/a_

| <<minimumReactivePower,`minimumReactivePower`>>
//| [[slots_table.minimumReactivePower]]<<minimumReactivePower,`minimumReactivePower`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++The minimum reactive power flow.+++
| _n/a_

| <<monitorActivePower,`monitorActivePower`>>
//| [[slots_table.monitorActivePower]]<<monitorActivePower,`monitorActivePower`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Monitor the active power flow.+++
| _n/a_

| <<monitorReactivePower,`monitorReactivePower`>>
//| [[slots_table.monitorReactivePower]]<<monitorReactivePower,`monitorReactivePower`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Monitor the reactive power flow.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BranchGroupTerminal]
=== `BranchGroupTerminal`
+++The directed branch group terminals to be summed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.BranchGroupTerminal`
| Cardinality
| 0..*
| Type
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]


|===

////
[.text-left]
--
<<slots_table.BranchGroupTerminal,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#maximumActivePower]
=== `maximumActivePower`
+++The maximum active power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.maximumActivePower`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.maximumActivePower,&#10548;>>
--
////


//[discrete]
[#maximumReactivePower]
=== `maximumReactivePower`
+++The maximum reactive power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.maximumReactivePower`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.maximumReactivePower,&#10548;>>
--
////


//[discrete]
[#minimumActivePower]
=== `minimumActivePower`
+++The minimum active power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.minimumActivePower`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.minimumActivePower,&#10548;>>
--
////


//[discrete]
[#minimumReactivePower]
=== `minimumReactivePower`
+++The minimum reactive power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.minimumReactivePower`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.minimumReactivePower,&#10548;>>
--
////


//[discrete]
[#monitorActivePower]
=== `monitorActivePower`
+++Monitor the active power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.monitorActivePower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.monitorActivePower,&#10548;>>
--
////


//[discrete]
[#monitorReactivePower]
=== `monitorReactivePower`
+++Monitor the reactive power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.monitorReactivePower`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.monitorReactivePower,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PinBranchGroup]
=== `PinBranchGroup`



[cols="h,4",width=65%]
|===
| URI
| `cim:BranchGroup.PinBranchGroup`
| Cardinality
| 0..*
| Type
| xref::class/PinBranchGroup.adoc[`PinBranchGroup`]


|===

////
[.text-left]
--
<<slots_table.PinBranchGroup,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`] | xref::class/BranchGroupTerminal.adoc#BranchGroup[`BranchGroup`]



| xref::class/PinBranchGroup.adoc[`PinBranchGroup`] | xref::class/PinBranchGroup.adoc#BranchGroup[`BranchGroup`]


|===

